# voice-assistant

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  docker-compose.sans-stt.yml  docker-compose.yml
action-forge/: Dockerfile  README.md  pyproject.toml
action-forge/app/: boucle.py  config.py  gestionnaire.py  main.py  mcp_server.py  routes.py  routes_atelier.py  schemas.py
action-forge/app/annonce/: base.py  journal.py  pont_hote.py
action-forge/app/atelier/: base.py  docker.py  fake.py
action-forge/app/atelier_ui/: index.html
action-forge/app/llm/: base.py  factice.py  openai_compat.py
action-forge/atelier/: Dockerfile
action-forge/tests/: conftest.py  test_annonce.py  test_annonceur_pont_hote.py  test_atelier_docker.py  test_atelier_factice.py  test_atelier_ui.py  test_boucle_codeact.py  test_gestionnaire_taches.py  test_health.py  test_outils_mcp.py  test_routes_taches.py
coquille/: .gitignore  README.md
coquille/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
coquille/src-tauri/capabilities/: default.json
coquille/src-tauri/icons/: .gitkeep  icon.icns
coquille/src-tauri/src/: lib.rs  main.rs
coturn/: turnserver.conf
dialogue-forge/: Dockerfile  README.md  pyproject.toml
dialogue-forge/app/: config.py  dialogue.py  main.py  personas.py  preferences.py  schemas.py  segmentation.py
dialogue-forge/app/llm/: base.py  fake.py  openai_compat.py
dialogue-forge/app/memoire/: base.py  fake.py  rest.py
dialogue-forge/app/module_dialogue/: dialogue.css  dialogue.js  index.html
dialogue-forge/app/outils/: base.py  fake.py  mcp.py
dialogue-forge/app/reglage/: index.html  reglage.css  reglage.js
dialogue-forge/app/routes/: api.py  module_dialogue.py  reglage.py
dialogue-forge/app/voix/: base.py  fake.py  rest.py
dialogue-forge/tests/: conftest.py  test_conversations.py  test_dialogue.py  test_garde_fou_echo.py  test_module_interface.py  test_module_reglage.py  test_reglage.py  test_sante_et_personas.py  test_segmentation.py  test_tolerance_forges_outils.py  test_voix.py
docs/: ACCEPTANCE-CAPACITES.md  ACCEPTANCE-MEMOIRE.md  ACCEPTANCE.md  OPENWEBUI.md  impasses.md  plan-de-tests.md  roadmap.md
documents/: README.md
host-bridge/: README.md  catalog.example.toml  pyproject.toml
host-bridge/app/: catalog.py  config.py  main.py  mcp_server.py
host-bridge/app/actions/: base.py  fake.py  subprocess_runner.py
host-bridge/app/audio/: base.py  fake.py  system.py
host-bridge/app/conversation/: base.py  fake.py  transport.py
host-bridge/app/routes/: api.py
host-bridge/tests/: conftest.py  test_api.py  test_arbitrage_annonce.py  test_catalog.py  test_factories.py  test_mcp_tools.py  test_securite.py
memory-forge/: Dockerfile  README.md  pyproject.toml
memory-forge/app/: config.py  main.py  mcp_server.py  schemas.py
memory-forge/app/graph/: base.py  fake.py  francais.py  graphiti.py  ontologie.py
memory-forge/app/ingest/: chunker.py  watcher.py
memory-forge/app/insight/: __init__.py  base.py  fake.py  openai_compat.py  prompt.py
memory-forge/app/interrogation/: __init__.py  base.py  executeur.py  executeur_neo4j.py  fake.py  gabarits.py  garde_fous.py  openai_compat.py  prompt.py  resolution.py
memory-forge/app/routes/: api.py
memory-forge/app/viz/: adressabilite.js  analyse.py  encodageType.js  index.html  lectureTemporelle.js
memory-forge/scripts/: corpus_synthetique.py
memory-forge/tests/: adressabilite.test.mjs  conftest.py  encodageType.test.mjs  lectureTemporelle.test.mjs  test_analyse.py  test_backend_factory.py  test_corpus_synthetique.py  test_corrections.py  test_episodes.py  test_et_si.py  test_extraction_francais.py  test_gabarits.py  test_graph_viz.py  test_graphiti.py  test_ingest.py  test_insight.py  test_interrogation.py  test_mcp_tools.py  test_ontologie.py  test_openwebui_filter.py  test_resolution.py
time-forge/: .dockerignore  Dockerfile  README.md  pyproject.toml
time-forge/app/: __main__.py  config.py  main.py  mcp_server.py  schemas.py  timers.py
time-forge/app/announce/: base.py  hostbridge.py  log.py
time-forge/app/routes/: api.py
time-forge/app/store/: base.py  memory.py  sqlite.py
time-forge/app/viz/: index.html
time-forge/tests/: conftest.py  test_agenda_loop.py  test_agenda_viz.py  test_api.py  test_factories.py  test_hostbridge_announcer.py  test_mcp_tools.py  test_store.py  test_timers.py
transport-voix/: README.md  pyproject.toml
transport-voix/app/: config.py  main.py
transport-voix/app/assets/: README.md
transport-voix/app/dialogue/: base.py  fake.py  rest.py
transport-voix/app/routes/: api.py
transport-voix/app/stt/: base.py  fake.py  whispercpp.py
transport-voix/app/transport/: base.py  dialogue_processor.py  fake.py  normaliseur_wav.py  pipecat.py  selecteur_voix.py  tts_voiceforge.py
transport-voix/app/tts/: base.py  fake.py  voiceforge.py
transport-voix/app/web/: prototype.html
transport-voix/tests/: conftest.py  test_annonce_dans_la_conversation.py  test_cors_coquille.py  test_dialogue_factice.py  test_dialogue_processor_voix_pipecat.py  test_dialogue_rest.py  test_fabriques.py  test_normaliseur_wav.py  test_offre_signaling.py  test_sante.py  test_selecteur_voix.py  test_stt_factice.py  test_transport_factice.py  test_tts_factice.py  test_tts_voiceforge_pipecat.py
voice-forge/: .dockerignore  Dockerfile  README.md  pyproject.toml
voice-forge/app/: config.py  main.py  schemas.py
voice-forge/app/admin/: index.html
voice-forge/app/decodeurs/: base.py  factory.py  fake.py  ffmpeg.py
voice-forge/app/providers/: base.py  cache.py  chatterbox.py  factory.py  fake.py  qwen3tts.py
voice-forge/app/routes/: admin.py  openai_audio.py
voice-forge/app/voices/: manager.py  normalisation.py
voice-forge/scripts/: renormaliser_voix.py
voice-forge/tests/: conftest.py  test_admin_api.py  test_cache.py  test_chatterbox_provider.py  test_decodeur.py  test_health.py  test_models_endpoint.py  test_normalisation.py  test_provider_factory.py  test_qwen3tts_provider.py  test_speech_endpoint.py  test_v1_alias.py  test_voices_endpoint.py
(+132 files in other folders)
