[project]
name = "action-forge"
version = "0.1.0"
description = "L'agir CodeAct de l'assistant vocal : Tâche → Actions dans un Atelier Docker jetable"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "mcp>=1.28.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
# Extra volontairement séparé : client Docker (pilotage des Ateliers frères).
# Installer plus tard avec : uv sync --extra docker
docker = [
    "docker>=7.1",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
