[project]
name = "dialogue-forge"
version = "0.1.0"
description = "Orchestrateur de dialogue (le cerveau conversationnel) de l'assistant vocal local — ADR 0009"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "mcp>=1.28.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
