[project]
name = "host-bridge"
version = "0.1.0"
description = "Le Pont hôte : pied de l'assistant sur la machine hôte, hors Docker — enceintes (annonces) et catalogue d'actions en liste blanche (ADR 0008)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "mcp>=1.28.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
